--- a/locale/en/LC_MESSAGES/docs-gofast-development/api-rest.po
+++ b/locale/en/LC_MESSAGES/docs-gofast-development/api-rest.po
@@ -8,17 +8,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gofast-docs latest\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-21 13:53+0200\n"
+"POT-Creation-Date: 2020-02-18 14:07+0100\n"
 "PO-Revision-Date: 2020-01-14 08:11+0000\n"
 "Last-Translator: Christopher Potter <cpotter@ceo-vision.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
+"Language-Team: en <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=n != 1\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.6.1\n"
-"Generated-By: Babel 2.4.0\n"
+"Generated-By: Babel 2.7.0\n"
 
 #: ../../docs-gofast-development/api-rest.rst:3
 msgid "GoFAST :  API REST"
@@ -31,8 +30,8 @@ msgid ""
 "toutes les informations nécessaires à l'exploitation de cette API."
 msgstr ""
 "The GoFAST API REST allows developers to interact with the application "
-"programmatically. On this page you will find all the necessary information "
-"to operate the API."
+"programmatically. On this page you will find all the necessary "
+"information to operate the API."
 
 #: ../../docs-gofast-development/api-rest.rst:8
 msgid "Authentification"
@@ -48,9 +47,9 @@ msgid ""
 "classique définit dans la RFC 7617 controlée par le protocole HTTP (aussi"
 " appelée HTTP authentication)."
 msgstr ""
-"The Basic authentication method is the classic authentication method defined "
-"in RFC 7617 which is controlled by the HTTP protocol (also called HTTP "
-"authentication)."
+"The Basic authentication method is the classic authentication method "
+"defined in RFC 7617 which is controlled by the HTTP protocol (also called"
+" HTTP authentication)."
 
 #: ../../docs-gofast-development/api-rest.rst:15
 msgid ""
@@ -58,17 +57,17 @@ msgid ""
 "valeur la chaine *Basic AUTHORIZATION_VALUE* ou *AUTHORIZATION_VALUE* est"
 " la chaine *username:password* encodée en base 64."
 msgstr ""
-"It requires passing the header *Authorization* to a request with the string *"
-"Basic AUTHORIZATION_VALUE* or *AUTHORIZATION_VALUE* which is the string of "
-"the *username: password* encoded with a base 64."
+"It requires passing the header *Authorization* to a request with the "
+"string *Basic AUTHORIZATION_VALUE* or *AUTHORIZATION_VALUE* which is the "
+"string of the *username: password* encoded with a base 64."
 
 #: ../../docs-gofast-development/api-rest.rst:17
 msgid ""
 "Exemple : Pour l'utilisateur user1:motdepasse1, il faudra passer la "
 "valeur : *Basic dXNlcjE6bW90ZGVwYXNzZTE=*"
 msgstr ""
-"For example: For a user1: password1, you will have to pass the value: *Basic "
-"dXNlcjE6bW90ZGVwYXNzZTE =*"
+"For example: For a user1: password1, you will have to pass the value: "
+"*Basic dXNlcjE6bW90ZGVwYXNzZTE =*"
 
 #: ../../docs-gofast-development/api-rest.rst:21
 msgid "Token"
@@ -92,8 +91,8 @@ msgid ""
 "L'action *token* n'est pas disponible depuis l'API externe de GoFAST, "
 "elle est utilisée entre les composants internes de la plateforme."
 msgstr ""
-"The *token* action is not available from the external GoFAST API, it is used "
-"between the internal components of the platform."
+"The *token* action is not available from the external GoFAST API, it is "
+"used between the internal components of the platform."
 
 #: ../../docs-gofast-development/api-rest.rst:30
 msgid "Ressources"
@@ -108,7 +107,8 @@ msgid ""
 "Cette ressource permet d'intéragir avec le système d'authentification de "
 "GoFAST."
 msgstr ""
-"This resource allows you to interact with the GoFAST authentication system."
+"This resource allows you to interact with the GoFAST authentication "
+"system."
 
 #: ../../docs-gofast-development/api-rest.rst:38
 msgid "Action : token"
@@ -119,7 +119,8 @@ msgid ""
 "Cette action permet d'intéragir avec le système d'authentification par "
 "token."
 msgstr ""
-"This action allows you to interact with authentication system using a token."
+"This action allows you to interact with authentication system using a "
+"token."
 
 #: ../../docs-gofast-development/api-rest.rst:45
 #: ../../docs-gofast-development/api-rest.rst:88
@@ -142,8 +143,8 @@ msgid ""
 "Cette méthode permet de récupérer un token d'authentification. Ce dernier"
 " est valable pendant 3 minutes."
 msgstr ""
-"This method allows you to retrieve an authentication token. It is valid for "
-"3 minutes."
+"This method allows you to retrieve an authentication token. It is valid "
+"for 3 minutes."
 
 #: ../../docs-gofast-development/api-rest.rst:49
 msgid "*GET: /api/login/token*"
@@ -473,8 +474,8 @@ msgid ""
 " Ces derniers peuvent représenter des documents, articles, espaces, "
 "formulaires..."
 msgstr ""
-"This resource allows you to interact with Drupal node type entities. They "
-"can represent documents, articles, spaces, forms…"
+"This resource allows you to interact with Drupal node type entities. They"
+" can represent documents, articles, spaces, forms…"
 
 #: ../../docs-gofast-development/api-rest.rst:83
 msgid "Action : node"
@@ -484,15 +485,13 @@ msgstr "Action: node"
 msgid ""
 "Cette action permet d'intéragir basiquement avec les entités Drupal de "
 "type noeud."
-msgstr ""
-"This action basically allows interacting with Drupal node type entities."
+msgstr "This action basically allows interacting with Drupal node type entities."
 
 #: ../../docs-gofast-development/api-rest.rst:90
 msgid ""
 "Cette méthode permet de récupérer des informations génériques d'une "
 "entité de type noeud"
-msgstr ""
-"This method allows to retrieve generic information from a node type entity"
+msgstr "This method allows to retrieve generic information from a node type entity"
 
 #: ../../docs-gofast-development/api-rest.rst:92
 msgid "*GET: /api/node/node*"
@@ -671,8 +670,8 @@ msgid ""
 "est obligatoire d'y ajouter un fichier."
 msgstr ""
 "This method allows creating a node type entity. If this node is of type "
-"alfresco_item and it is not created from a template, it is required to add a "
-"file."
+"alfresco_item and it is not created from a template, it is required to "
+"add a file."
 
 #: ../../docs-gofast-development/api-rest.rst:153
 msgid "*POST: /api/node/node*"
@@ -692,8 +691,8 @@ msgid ""
 "Le fichier à charger (si le type de noeud est 'alfresco_item' et qu'il "
 "n'est pas à créer à partir d'un template)"
 msgstr ""
-"The file to upload (if the node type is \"alfresco_item\" and it is not to "
-"be created from a template)"
+"The file to upload (if the node type is \"alfresco_item\" and it is not "
+"to be created from a template)"
 
 #: ../../docs-gofast-development/api-rest.rst:176
 msgid "type*"
@@ -779,8 +778,8 @@ msgid ""
 "Cette action permet d'intéragir avec les métadonnées associés aux entités"
 " de type noeud"
 msgstr ""
-"This action allows interacting with the metadata associated with node type "
-"entities"
+"This action allows interacting with the metadata associated with node "
+"type entities"
 
 #: ../../docs-gofast-development/api-rest.rst:216
 msgid ""
@@ -820,7 +819,8 @@ msgid ""
 "Cette méthode permet de mettre à jour les métadonnées associés aux "
 "entités de type noeud"
 msgstr ""
-"This method allows updating the metadata associated with node type entities"
+"This method allows updating the metadata associated with node type "
+"entities"
 
 #: ../../docs-gofast-development/api-rest.rst:255
 msgid "*POST: /api/node/metadata*"
@@ -832,8 +832,8 @@ msgid ""
 "Contrairement au retour de la méthode GET, les valeurs ne doivent pas "
 "êtres listés de cette manière"
 msgstr ""
-"Unlike the feedback of the GET method, the values should not be listed in "
-"this way"
+"Unlike the feedback of the GET method, the values should not be listed in"
+" this way"
 
 #: ../../docs-gofast-development/api-rest.rst:267
 #: ../../docs-gofast-development/api-rest.rst:271
@@ -895,9 +895,9 @@ msgid ""
 "field_target_link, field_external_page_url, field_date, field_criticity, "
 "field_document_author, field_tags"
 msgstr ""
-"The modifiable fields are : field_category, field_state, field_target_link, "
-"field_external_page_url, field_date, field_criticity, field_document_author, "
-"field_tags"
+"The modifiable fields are : field_category, field_state, "
+"field_target_link, field_external_page_url, field_date, field_criticity, "
+"field_document_author, field_tags"
 
 #: ../../docs-gofast-development/api-rest.rst:298
 #: ../../docs-gofast-development/api-rest.rst:351
@@ -925,8 +925,8 @@ msgid ""
 "Cette méthode permet d'ajouter une valeur à certaines métadonnées "
 "associés aux entités de type noeud"
 msgstr ""
-"This method allows you to add a value to certain metadata associated with "
-"node type entities"
+"This method allows you to add a value to certain metadata associated with"
+" node type entities"
 
 #: ../../docs-gofast-development/api-rest.rst:308
 msgid "*PATCH: /api/node/metadata*"
@@ -957,8 +957,8 @@ msgid ""
 "Cette méthode permet de récupérer les emplacements des contenus associés "
 "aux entités de type noeud"
 msgstr ""
-"This method allows to retrieve the locations of the content associated with "
-"node type entities"
+"This method allows to retrieve the locations of the content associated "
+"with node type entities"
 
 #: ../../docs-gofast-development/api-rest.rst:366
 msgid "*GET: /api/node/locations*"
@@ -1009,16 +1009,15 @@ msgstr "Indexed array containing locations"
 #: ../../docs-gofast-development/api-rest.rst:430
 #: ../../docs-gofast-development/api-rest.rst:467
 msgid "Tableau indexé contenant les emplacements après vidage du cache."
-msgstr ""
-"Indexed array containing the locations after the cache has been emptied."
+msgstr "Indexed array containing the locations after the cache has been emptied."
 
 #: ../../docs-gofast-development/api-rest.rst:436
 msgid ""
 "Cette méthode permet d'ajouter ou de supprimer des emplacements des "
 "contenus associés aux entités de type noeud"
 msgstr ""
-"This method allows you to add or delete locations of the content associated "
-"with node type entities"
+"This method allows you to add or delete locations of the content "
+"associated with node type entities"
 
 #: ../../docs-gofast-development/api-rest.rst:438
 msgid "*POST: /api/node/locations*"
@@ -1045,8 +1044,8 @@ msgid ""
 "Cette action permet d'intéragir avec le contenu Alfresco associés aux "
 "entités de type noeud"
 msgstr ""
-"This action allows interacting with Alfresco content associated with node "
-"type entities"
+"This action allows interacting with Alfresco content associated with node"
+" type entities"
 
 #: ../../docs-gofast-development/api-rest.rst:477
 #: ../../docs-gofast-development/api-rest.rst:568
@@ -1056,14 +1055,15 @@ msgid ""
 " à une erreur \"404 Not Found\". Les noeuds associés à un contenu "
 "Alfresco sont de type \"alfresco_item\"."
 msgstr ""
-"Using this action on a node without association with Alfresco content will "
-"result in a \"404 Not Found\" error. The nodes associated with Alfresco "
-"content are of type \"alfresco_item\"."
+"Using this action on a node without association with Alfresco content "
+"will result in a \"404 Not Found\" error. The nodes associated with "
+"Alfresco content are of type \"alfresco_item\"."
 
 #: ../../docs-gofast-development/api-rest.rst:482
 msgid "Cette méthode permet de récupérer le contenu Alfresco associé à un noeud."
 msgstr ""
-"This method allows to retrieve the Alfresco content associated with a node."
+"This method allows to retrieve the Alfresco content associated with a "
+"node."
 
 #: ../../docs-gofast-development/api-rest.rst:484
 msgid "*GET: /api/node/content*"
@@ -1221,8 +1221,8 @@ msgid ""
 "Cette méthode permet de récupérer les versions d'un contenu Alfresco "
 "associé à une entité de type noeud"
 msgstr ""
-"This method makes it possible to retrieve the versions of Alfresco content "
-"linked to a node type entity"
+"This method makes it possible to retrieve the versions of Alfresco "
+"content linked to a node type entity"
 
 #: ../../docs-gofast-development/api-rest.rst:653
 msgid "*GET: /api/node/version*"
@@ -1266,16 +1266,16 @@ msgid ""
 "Cette action permet d'intéragie avec le système d'autocomplétion des "
 "entités *node* de Drupal."
 msgstr ""
-"This action enables to interact with the autocompletion system of the Drupal "
-"*node* entity."
+"This action enables to interact with the autocompletion system of the "
+"Drupal *node* entity."
 
 #: ../../docs-gofast-development/api-rest.rst:697
 msgid ""
 "Cette méthode permet de récupérer une liste de noeuds en fonction de la "
 "chaine passée en input et des bundles demandés."
 msgstr ""
-"This method enables to retrieve a list of nodes based on the last string in "
-"input and requested bundles."
+"This method enables to retrieve a list of nodes based on the last string "
+"in input and requested bundles."
 
 #: ../../docs-gofast-development/api-rest.rst:699
 msgid "*GET: /api/node/autocomplete*"
@@ -1314,8 +1314,8 @@ msgid ""
 "comment. Ces derniers représent des commentaires associés à des entités "
 "de type noeud (node)"
 msgstr ""
-"This resource helps you to interact with Drupal comment-type entities. They "
-"represent comments associated with node type entities"
+"This resource helps you to interact with Drupal comment-type entities. "
+"They represent comments associated with node type entities"
 
 #: ../../docs-gofast-development/api-rest.rst:737
 msgid "Action : comment"
@@ -1409,10 +1409,11 @@ msgid "Ressource : space"
 msgstr "Resource : space"
 
 #: ../../docs-gofast-development/api-rest.rst:826
+#, fuzzy
 msgid ""
-"Cette ressource permet d'intéragir avec les Organic Groups de Drupal de "
-"type comment. Ces derniers représentent ce que l'on appel des *espaces "
-"collaboratifs*"
+"Cette ressource permet d'intéragir avec les *Organic Groups* de Drupal de"
+" type comment. Ces derniers représentent ce que l'on appelle des *espaces"
+" collaboratifs*"
 msgstr ""
 "This resource allows you to interact with Drupal Comment-type Organic "
 "Groups. They represent the so-called *collaborative spaces*"
@@ -1422,8 +1423,9 @@ msgid "Action : space"
 msgstr "Action : space"
 
 #: ../../docs-gofast-development/api-rest.rst:831
+#, fuzzy
 msgid ""
-"Cette action permet d'intéragir basiquement avec les Organic Groups de "
+"Cette action permet d'intéragir basiquement avec les *Organic Groups* de "
 "Drupal."
 msgstr "This action helps to interact basically with the Drupal Organic Groups."
 
@@ -1432,8 +1434,8 @@ msgid ""
 "Cette méthode permet de créer un *espace collaboratif* en passant par le "
 "mécanisme Drupal"
 msgstr ""
-"This method allows you to create a *collaborative space* through the Drupal "
-"mechanism"
+"This method allows you to create a *collaborative space* through the "
+"Drupal mechanism"
 
 #: ../../docs-gofast-development/api-rest.rst:838
 msgid "*PUT: /api/space/space*"
@@ -1473,8 +1475,9 @@ msgid ""
 "taxonomy permets d'associer des *termes* à un contenu (exemple : "
 "catégorie, importance...)"
 msgstr ""
-"This resource helps to interact with Drupal taxonomy. The taxonomy allows to "
-"associate *terms* with a content (for example: category, importance...)"
+"This resource helps to interact with Drupal taxonomy. The taxonomy allows"
+" to associate *terms* with a content (for example: category, "
+"importance...)"
 
 #: ../../docs-gofast-development/api-rest.rst:877
 msgid "Action : terms"
@@ -1491,8 +1494,8 @@ msgid ""
 "Cette méthode permet de récupérer les *termes* de taxonomy associés à un "
 "vocabulaire"
 msgstr ""
-"This method makes it possible to retrieve taxonomy *terms* associated with a "
-"vocabulary"
+"This method makes it possible to retrieve taxonomy *terms* associated "
+"with a vocabulary"
 
 #: ../../docs-gofast-development/api-rest.rst:886
 msgid ""
@@ -1501,7 +1504,8 @@ msgid ""
 " criticity, tags"
 msgstr ""
 "The available *vocabulary_name* values can be retrieved from the "
-"vocabularies action. Example of possible values: category, criticity, tags"
+"vocabularies action. Example of possible values: category, criticity, "
+"tags"
 
 #: ../../docs-gofast-development/api-rest.rst:888
 msgid "*GET: /api/taxonomy/terms*"
@@ -1532,15 +1536,16 @@ msgid ""
 "Cette action permet d'intéragir avec les *vocabularies* de la taxonomy de"
 " Drupal."
 msgstr ""
-"This action helps to interact with the *vocabularies* of the Drupal taxonomy."
+"This action helps to interact with the *vocabularies* of the Drupal "
+"taxonomy."
 
 #: ../../docs-gofast-development/api-rest.rst:925
 msgid ""
 "Cette méthode permet de récupérer les *vocabularies* de la taxonomy de "
 "Drupal"
 msgstr ""
-"This method makes it possible to retrieve the *vocabularies* of the Drupal "
-"taxonomy"
+"This method makes it possible to retrieve the *vocabularies* of the "
+"Drupal taxonomy"
 
 #: ../../docs-gofast-development/api-rest.rst:927
 msgid "*GET: /api/taxonomy/vocabularies*"
@@ -1563,23 +1568,22 @@ msgid ""
 "Cette ressource permet d'intéragir avec les entités *user* de Drupal. Ces"
 " entités représentent les utilisateurs enregistrés sur la plateforme."
 msgstr ""
-"This resource makes it possible to interact with the Drupal *user* entities "
-". These entities represent the users registered on the platform."
+"This resource makes it possible to interact with the Drupal *user* "
+"entities . These entities represent the users registered on the platform."
 
 #: ../../docs-gofast-development/api-rest.rst:951
 msgid ""
 "Cette action permet d'intéragie avec le système d'autocomplétion des "
 "entités *user* de Drupal."
 msgstr ""
-"This action allows you to interact with an autocompletion system of Drupal "
-"*user* entities."
+"This action allows you to interact with an autocompletion system of "
+"Drupal *user* entities."
 
 #: ../../docs-gofast-development/api-rest.rst:956
 msgid ""
 "Cette méthode permet de récupérer une liste d'utilisateurs en fonction de"
 " la chaine passée en input."
-msgstr ""
-"This method allows to get a list of users according to the input string."
+msgstr "This method allows to get a list of users according to the input string."
 
 #: ../../docs-gofast-development/api-rest.rst:958
 msgid "*GET: /api/user/autocomplete*"
@@ -1595,8 +1599,8 @@ msgid ""
 "Alfresco (l'ensemble des dossiers et espaces d'un point de vue GED "
 "uniquement)"
 msgstr ""
-"This resource makes it possible to interact with the available locations on "
-"Alfresco (all the files and spaces from a DMS point of view only)"
+"This resource makes it possible to interact with the available locations "
+"on Alfresco (all the files and spaces from a DMS point of view only)"
 
 #: ../../docs-gofast-development/api-rest.rst:993
 msgid "Action : tree"
@@ -1607,8 +1611,8 @@ msgid ""
 "Cette action permet de récupérer un *tree* d'emplacements au format JSON "
 "compatible avec le composant ZTree."
 msgstr ""
-"This action helps to recover a *tree* of locations in JSON format compatible "
-"with the ZTree component."
+"This action helps to recover a *tree* of locations in JSON format "
+"compatible with the ZTree component."
 
 #: ../../docs-gofast-development/api-rest.rst:1000
 msgid ""
@@ -1637,3 +1641,4 @@ msgstr "tree"
 #: ../../docs-gofast-development/api-rest.rst:1027
 msgid "Chaine au format JSON directement exploitable par la librairie ZTree"
 msgstr "JSON format string is directly usable by the ZTree library"
+
